<resources>
    <string name="app_name">Grupo10DAM</string>
    <string name="txtNombre"> Nombre del elemento </string>
    <string name="txtDescripcion"> Descripcion del elemento </string>
    <string name="btnAgregar"> Agregar Al Carrito </string>
    <string name="txtPrecio"> Precio: $ 00.00 </string>
    <string name="btnComprar"> Ordenar Ahora </string>
    <string name="txtCantidad"> Cantidad: 1 </string>
    <string name="btnSuma"> + </string>
    <string name="btnResta"> - </string>
    <string name="txtMenus"> MENÚS </string>
    <string name="txtPlatos"> PLATOS </string>
    <string name="txtDPlatos"> PLATO </string>
    <string name="txtPedidos"> PEDIDOS </string>
    <string name="carrito">Carrito</string>
    <string name="cuenta">Cuenta</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>