<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/carrito"
        android:title="@string/carrito"
        android:icon="@drawable/shoppingcart_120371"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/cuenta"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="2"
        android:title="@string/cuenta"
        app:showAsAction="never" />
    <item
        android:id="@+id/cerrarSesion"
        android:title="@string/cerrar_sesi_n"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never"
        android:orderInCategory="3"
        />/>
</menu>